--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\JsonChan\JsonChan.csproj" />
       <ProjectReference Include="..\Kotlinize\Kotlinize.csproj" />
     </ItemGroup>
 
