--- a/Kotlinize/Kotlinize.csproj
+++ b/Kotlinize/Kotlinize.csproj
@@ -13,6 +13,8 @@
 
         <RootNamespace>Paraparty</RootNamespace>
 
+        <AssemblyName>Paraparty.Kotlinize</AssemblyName>
+
 <!--        <Nullable>enable</Nullable>-->
 <!--        <WarningsAsErrors>Nullable</WarningsAsErrors>-->
     </PropertyGroup>
