--- a/JsonChan/JsonChan.csproj
+++ b/JsonChan/JsonChan.csproj
@@ -17,6 +17,11 @@
 
         <RootNamespace>Paraparty</RootNamespace>
         <AssemblyName>Paraparty.JsonChan</AssemblyName>
+
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Version>1.0.0</Version>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
