--- a/JsonChan/JsonChan.csproj
+++ b/JsonChan/JsonChan.csproj
@@ -8,7 +8,7 @@
 
         <Authors>ParaParty</Authors>
         <Product>ParaParty Util JsonChan</Product>
-        <PackageProjectUrl>https://robot.binkic.com</PackageProjectUrl>
+        <PackageProjectUrl>https://pkg.para.party/ParaPartyUtil</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ParaParty/ParaPartyUtil/</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <Description>ParaParty Util JsonChan</Description>
