--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,24 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
-
+        <TargetFramework>net8.0</TargetFramework>
         <IsPackable>false</IsPackable>
-
         <RootNamespace>Paraparty.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-        <PackageReference Include="NUnit" Version="3.13.2" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.0" />
+        <PackageReference Include="MSTest" Version="3.4.3"/>
+        <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.10.4"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\JsonChan\JsonChan.csproj" />
-      <ProjectReference Include="..\Kotlinize\Kotlinize.csproj" />
+        <ProjectReference Include="..\JsonChan\JsonChan.csproj"/>
+        <ProjectReference Include="..\UnityNative\UnityNative.csproj"/>
+        <ProjectReference Include="..\Kotlinize\Kotlinize.csproj"/>
     </ItemGroup>
 
 </Project>
