--- a/UnityNative/party.para.util.unitynative.asmdef
+++ b/UnityNative/party.para.util.unitynative.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "party.para.util.unitynative",
-    "rootNamespace": "ParaPartyUtil.UnityNative",
+    "rootNamespace": "Paraparty.UnityNative",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
