--- a/Colors/Colors.csproj
+++ b/Colors/Colors.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>7.2</LangVersion>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <LangVersion>8</LangVersion>
         <Nullable>disable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
         <Authors>ParaParty</Authors>
-        <Product>ParaParty Util UnityNative</Product>
+        <Product>ParaParty Util Colors</Product>
         <PackageProjectUrl>https://pkg.para.party/ParaPartyUtil</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ParaParty/ParaPartyUtil/</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <Description>ParaParty Util UnityNative</Description>
 
         <RootNamespace>Paraparty</RootNamespace>
-        <AssemblyName>Paraparty.UnityNative</AssemblyName>
+        <AssemblyName>Paraparty.Colors</AssemblyName>
 
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Version>3.0.0</Version>
