--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -16,6 +16,7 @@
         <ProjectReference Include="..\JsonChan\JsonChan.csproj"/>
         <ProjectReference Include="..\UnityNative\UnityNative.csproj"/>
         <ProjectReference Include="..\Kotlinize\Kotlinize.csproj"/>
+        <ProjectReference Include="..\Strings\Strings.csproj"/>
     </ItemGroup>
 
 </Project>
