--- a/Colors/Colors.csproj
+++ b/Colors/Colors.csproj
@@ -17,6 +17,7 @@
         <AssemblyName>Paraparty.Colors</AssemblyName>
 
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageId>Paraparty.Colors</PackageId>
         <Version>3.0.0</Version>
         <AssemblyVersion>3.0.0.0</AssemblyVersion>
         <FileVersion>3.0.0.0</FileVersion>
