--- a/JsonChan/JsonChan.csproj
+++ b/JsonChan/JsonChan.csproj
@@ -17,6 +17,7 @@
         <AssemblyName>Paraparty.JsonChan</AssemblyName>
 
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageId>Paraparty.JsonChan</PackageId>
         <Version>3.0.0</Version>
         <AssemblyVersion>3.0.0.0</AssemblyVersion>
         <FileVersion>3.0.0.0</FileVersion>
