--- a/Kotlinize/Kotlinize.csproj
+++ b/Kotlinize/Kotlinize.csproj
@@ -17,6 +17,7 @@
         <AssemblyName>Paraparty.Kotlinize</AssemblyName>
         
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageId>Paraparty.Kotlinize</PackageId>
         <Version>3.0.0</Version>
         <AssemblyVersion>3.0.0.0</AssemblyVersion>
         <FileVersion>3.0.0.0</FileVersion>
